--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://auth.davidnet.net" crossorigin>
 		<link rel="dns-prefetch" href="https://auth.davidnet.net">
 		<title>Davidnet</title>
-		<link rel="icon" type="image/svg+xml" href="https://design.davidnet.net/images/logos/DNLogo.png">
+		<link rel="icon" type="image/png" href="https://design.davidnet.net/images/logos/DNLogo.png">
 		<link rel="alternate icon" href="https://design.davidnet.net/images/logos/DNLogo.png">
 		<meta name="description" content="Welcome to Davidnet" />
 
