--- a/src/app.html
+++ b/src/app.html
@@ -68,6 +68,15 @@
 			}
 		</style>
 		<link rel="stylesheet" href="https://design.davidnet.net/global.css" />
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Organization",
+				"name": "Davidnet",
+				"url": "https://davidnet.net",
+				"logo": "https://design.davidnet.net/images/logos/DNLogo.png"
+			}
+		</script>
 		%sveltekit.head%
 	</head>
 
